--- a/css/stylos.css
+++ b/css/stylos.css
@@ -92,7 +92,7 @@
      width: 50%;
      height: 100%;
      float: left;
-     background-image: url("https://instagram.ftru2-3.fna.fbcdn.net/vp/b0688a7b25707155831503784022609d/5DB57BE2/t51.2885-15/sh0.08/e35/s640x640/53082641_175979486717541_5359987971301961359_n.jpg?_nc_ht=instagram.ftru2-3.fna.fbcdn.net");
+     background-image: url("https://instagram.flim5-1.fna.fbcdn.net/vp/fe171d6bd438d544642c807d8aca2432/5DF26A16/t51.2885-15/sh0.08/e35/p750x750/41152732_2181575545458826_7507774784494993943_n.jpg?_nc_ht=instagram.flim5-1.fna.fbcdn.net");
      background-position: 50% 50%;
      background-size: cover;
    }
@@ -664,7 +664,7 @@
    .footer-block {
      padding-top: 55px;
      padding-bottom: 50px;
-     background-color: #f7f7f7;
+     background-color: #dcdcdc;
    }
    
    .footer-paragraph {
