--- a/css/stylos.css
+++ b/css/stylos.css
@@ -585,7 +585,7 @@
      margin-left: auto;
      border-radius: 100%;
      background-color: #acb9c2;
-     background-image: url("http://uploads.webflow.com/56c57a495f4a7cf431e728a0/56d6beafbe84aafb6ca028c1_Akira.jpg");
+     background-image: url("https://jamesvasquezg.github.io/pe/img/james.png");
      background-position: 50% 50%;
      background-size: cover;
    }
