--- a/css/stylos.css
+++ b/css/stylos.css
@@ -1,3 +1,10 @@
+.anuncios{
+  text-align: center;
+}
+
+
+
+
 /* Generated on: Mon Sep 12 2016 05:39:15 GMT+0000 (UTC) */
 /* ==========================================================================
    normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css 
