--- a/css/stylos.css
+++ b/css/stylos.css
@@ -99,7 +99,7 @@
      width: 50%;
      height: 100%;
      float: left;
-     background-image: url("https://instagram.flim5-2.fna.fbcdn.net/v/t51.2885-15/sh0.08/e35/p640x640/72198997_913500765713691_4599598368756918050_n.jpg?_nc_ht=instagram.flim5-2.fna.fbcdn.net&_nc_cat=103&_nc_ohc=DoB9BT8BYmEAX_RFb6L&oh=1ba156d7b93b2f7305fc7868f54fe4b1&oe=5E9005C6");
+     background-image: url("https://raw.githubusercontent.com/jamesvasquezg/pe/master/img/postindex.jpg");
      background-position: 50% 50%;
      background-size: cover;
    }
