--- a/css/stylos.css
+++ b/css/stylos.css
@@ -110,7 +110,7 @@
      width: 50%;
      height: 100%;
      float: left;
-     background-image: url("https://raw.githubusercontent.com/jamesvasquezg/pe/master/img/postindex.jpg");
+     background-image: url("https://images.pexels.com/photos/5926318/pexels-photo-5926318.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
      background-position: 50% 50%;
      background-size: cover;
    }
